force-app/main/default/objects/Bloom_Document_Requirement__mdt/Bloom_Document_Requirement__mdt.object-meta.xml
<CustomObject>
    <label>Bloom Document Requirement</label>
    <pluralLabel>Bloom Document Requirements</pluralLabel>
</CustomObject>